Ajout icon Index/proprietes + Index/reservations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
   height: 100vh;
 }
 body {
-  background-color: #FFEFD6;
+  // background-color: #FFEFD6;
+
   font-family: 'Open Sans', sans-serif;
 }
