--- a/app/assets/stylesheets/components/_card-propriete.scss
+++ b/app/assets/stylesheets/components/_card-propriete.scss
@@ -6,6 +6,13 @@
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.1);
 }
 
+#icons img {
+  height:100px;
+  width: 100px;
+  margin-top: 60px;
+  object-fit: cover;
+}
+
 // .card-propriete {
 //   overflow: hidden;
 //   height: 150px;
