Ajout nom complet aux seeds

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 //   background-color : #BA9FD9;
 //  }
 .container{
-  height: 100vh;
+  height: calc(100vh - 85px);
 }
 body {
   // background-color: #FFEFD6;
