--- a/app/views/proprietes/index.html.erb
+++ b/app/views/proprietes/index.html.erb
@@ -1,6 +1,7 @@
 
- <%= render "shared/navbar" %><div class="container my-5">
-  <div class="row justify-content-center py-4">
+ <%= render "shared/navbar" %><div class="container">
+  <div class="row justify-content-center">
+    <h5 class="text-center my-4">Bonjour <%= current_user.nom_complet %> !</h5>
     <% @proprietes.each do |p| %>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
         <%= link_to propriete_path(p), class: "text-decoration-none text-reset w-100", style: "max-width: 20rem;" do %>
