--- a/app/assets/stylesheets/components/_card-propriete.scss
+++ b/app/assets/stylesheets/components/_card-propriete.scss
@@ -15,6 +15,9 @@
 
 .card-body {
   //  background-color: #BDDDE4;
-   border-radius: 6px;
+   border-radius: 8px;
+}
 
+.card {
+  border-radius: 8px;
 }
