--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= asset_path 'champ.avif' %>')">
   <div class="container">
     <div class="row d-flex justify-content-center">
+      <h1 class="mt-3 mb-4 text-center">Family Loc</h1>
       <div class="col-sm-6 col-md-4 col-lg-4">
         <h2 class="text-white">Créer un compte</h2>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
