--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .btn-home {
   background-color:gold;
-  color: black;
+  color: white;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -9,6 +9,7 @@
   font-size: 16px;
   transition: background-color 0.3s ease;
   text-decoration: none;
+  font-weight: bolder;
 }
  h1 {
   font-family: "Ribeye", serif;
