--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -20,7 +20,7 @@
           data: { controller: "datepicker" }
         } %>
 
-        <%= f.submit "Demande de réservation" %>
+        <%= f.submit "Demande de réservation", class:"btn-home" %>
 
         <% end %>
       </div>
