--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,8 +2,8 @@
   <ul class="list-inline tabs-underlined d-flex align-items-center px-2">
 
     <!-- Logo avec marge à droite pour l'espacement -->
-    <li class="me-3 me-md-4">
-      <%= image_tag "FamilyLoc.png", style: "height: 35px; width: 35px;" %>
+    <li class="me-2 me-md-3">
+      <%= image_tag "FamilyLoc3.png", style: "height: 35px; width: 35px;" %>
     </li>
 
     <% if user_signed_in? %>
