--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -43,7 +43,7 @@
                               }
                   } do |f| %>
                   <%= f.input :statut, collection: Reservation.statuts.keys.map { |statut| [statut.humanize, statut] }, label: "Modifier le statut" %>
-                  <%= f.submit 'Mettre à jour', class: 'btn-home' %>
+                  <%= f.submit 'Mettre à jour', class: 'btn btn-ghost' %>
                 <% end %>
               <% end %>
 
