changement adresse seeds + calendrier commencé

--- a/app/views/reservations/calendar.html.erb
+++ b/app/views/reservations/calendar.html.erb
@@ -1,19 +1,18 @@
-<h1>Calendrier des réservations</h1>
+<h2 class="text-center">Calendrier des réservations</h2>
 
-
-<%= month_calendar(year: @year, month: @month) do |date| %>
-  <div style="border: 1px solid #ccc; padding: 5px; min-height: 80px;">
-    <strong><%= date.day %></strong>
+<div class="calendar-container d-flex justify-content-center">
+  <%= month_calendar(year: @year, month: @month) do |date| %>
+    <div class="day"><%= date.day %></div>
 
     <% reservations_du_jour = @reservations.select do |res|
          res.date_debut <= date && res.date_fin >= date
        end %>
 
     <% reservations_du_jour.each do |reservation| %>
-      <div style="background-color: #a7d8f7; margin-top: 4px; padding: 4px; border-radius: 4px;">
-        <%= reservation.propriete.nom %><br>
-        Réservé par <%= reservation.user.nom_complet %>
+      <div class="reservation-block">
+        <strong><%= reservation.propriete.adresse %></strong><br>
+        <%= reservation.user.nom_complet %>
       </div>
     <% end %>
-  </div>
-<% end %>
+  <% end %>
+</div>
