--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -20,6 +20,10 @@
   box-sizing: border-box; /* inclure padding/border dans largeur */
 }
 
+.table.table-striped {
+
+  padding: 10px;
+}
 .table.simple-calendar .day {
   font-weight: bold;
   margin-bottom: 5px;
@@ -38,4 +42,34 @@
 
 tr> td.day {
   width:80px;
+}
+
+.calendar-heading {
+  text-align: center;
+  margin-top: 20px;
+}
+
+nav > a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 12px;
+}
+
+.calendar-title {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+h3 {
+  color:gold;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px;
+  text-align: center;
+}
+
+#font-calendar {
+  color:gold;
+  font-size: 36px;
 }
