--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,11 +1,12 @@
  <%= render "shared/navbar" %>
 <div class="container mt-3">
-  <p>Consulter le calendrier des réservations</p>
-  <%= link_to "Voir le calendrier", calendar_reservations_path, class: "btn btn-ghost" %>
+  <div class="d-flex justify-content-start  align-items-center mb-4">
+   <i class="fa-solid fa-calendar-days me-2" id="font-calendar"></i> <%= link_to " Consulter le calendrier des réservations", calendar_reservations_path, class: "btn btn-home" %>
+  </div>
+
 
   <div class="row d-flex justify-content-center">
     <div class="col-sm-8 col-md-6 col-lg-6 mx-auto">
-      <p>Mes réservations</p>
       <% if @reservations.any? %>
         <% @reservations.each do |r| %>
           <div class="card mb-3">
