--- a/app/views/reservations/calendar.html.erb
+++ b/app/views/reservations/calendar.html.erb
@@ -19,4 +19,8 @@
       </div>
     <% end %>
   <% end %>
+
 </div>
+ <div class="d-flex justify-content-center mt-3">
+    <%= link_to "Retour", reservations_path, class:"text-decoration-none text-dark" %>
+  </div>
