--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -6,8 +6,8 @@
  "description": "FamilyLoc est une application crée par la famille pour la famille afin de gérer entre nous l'occupation des propriétés familiales.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f5f5f5",
-  "theme_color": "gold",
+  "background_color": "#ffffff",
+  "theme_color": ,
  "icons": [
     <% files = Dir.entries(Rails.root.join("app/assets/images/icons/")).select {|f| !File.directory? f} %>
     <% files.each_with_index do |file, index| %>
