Ajout de text center reservations index

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -59,7 +59,7 @@
           <i class="fa-solid fa-calendar-xmark fa-5x text-info"></i>
         </div>
         <div class="d-flex justify-content-center mt-5">
-          <strong>Vous n'avez aucune réservation pour le moment. </strong>
+          <strong class="text-center">Vous n'avez aucune réservation pour le moment. </strong>
         </div>
       <% end %>
     </div>
