--- a/app/assets/stylesheets/components/_card-propriete.scss
+++ b/app/assets/stylesheets/components/_card-propriete.scss
@@ -9,7 +9,8 @@
 #icons img {
   height:50px;
   width: 50px;
-  margin-top: 60px;
+  margin-top: 40px;
+  margin-bottom: 30px;
   object-fit: cover;
   color: gold ;
 }
