Mise en place rememberable Devise

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row d-flex justify-content-center">
       <div class="col-sm-6 col-md-4 col-lg-4">
-        <h2>Change your password</h2>
+        <h2 class="text-white">Change your password</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
@@ -10,21 +10,21 @@
           <%= f.input :reset_password_token, as: :hidden %>
           <%= f.full_error :reset_password_token %>
 
-          <div class="form-inputs">
+          <div class="form-inputs mt-3">
             <%= f.input :password,
-                        label: "New password",
+                        label: "Nouveau mot de passe",
                         required: true,
                         autofocus: true,
-                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                        hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length),
                         input_html: { autocomplete: "new-password" } %>
             <%= f.input :password_confirmation,
-                        label: "Confirm your new password",
+                        label: "Confirmer le nouveau mot de passe",
                         required: true,
                         input_html: { autocomplete: "new-password" } %>
           </div>
 
-          <div class="form-actions">
-            <%= f.button :submit, "Change my password" %>
+          <div class="form-actions mb-4">
+            <%= f.button :submit, "Changer mon mot de passe", class:"btn-home"%>
           </div>
         <% end %>
 
@@ -32,4 +32,3 @@
       </div>
     </div>
   </div>
-
