--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -6,9 +6,9 @@
   <%= link_to "Créer un compte", new_registration_path(resource_name), class:"text-white" %><br />
 <% end %>
 
-<%# <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%# <%= link_to "Mot de passe oublié?", new_password_path(resource_name), class:"text-white"<br/> %>
-<%# <% end %>
+<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+  <%= link_to "Mot de passe oublié?", new_password_path(resource_name), class:"text-white"%><br/>
+<% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class:"text-white" %><br />
