--- a/app/views/reservations/calendar.html.erb
+++ b/app/views/reservations/calendar.html.erb
@@ -14,7 +14,7 @@
 
     <% reservations_du_jour.each do |reservation| %>
       <div class="reservation-block">
-        <strong><%= reservation.propriete.adresse %></strong><br>
+        <strong><%= reservation.propriete.nom %></strong><br>
         <%= reservation.user.nom_complet %>
       </div>
     <% end %>
