Ajout url site sur mail

--- a/app/views/reservation_mailer/notif_admin.html.erb
+++ b/app/views/reservation_mailer/notif_admin.html.erb
@@ -2,3 +2,7 @@
 <p><%= @reservation.user.email %></p>
 <p>pour: <%= @reservation.propriete.nom %></p>
 <p>du <%= @reservation.date_debut.strftime("%d/%m/%Y") %> au <%=@reservation.date_fin.strftime("%d/%m/%Y")%> </p>
+
+
+<p>Merci d’utiliser Family Loc !</p>
+<p>https://www.family-loc.store/</p>
