--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,44 +1,45 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= asset_path 'champ.avif' %>')">
   <div class="container">
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex flex-column justify-content-center align-items-center">
       <div class="col-sm-6 col-md-4 col-lg-4">
-        <h2 class="text-white">Edit <%= resource_name.to_s.humanize %></h2>
+        <h2 class="text-white mt-5">Modifier le mot de passe</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
 
-          <div class="form-inputs">
+          <div class="form-inputs mt-3">
             <%= f.input :email, required: true, autofocus: true %>
 
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
               <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
             <% end %>
             <%= f.input :nom_complet, required: true, autofocus: true,
-                        hint: " leave it blank if you don't want to change it",
+
                         input_html: { autocomplete: "nom & prénom" } %>
-            <%= f.input :password,
-                        hint: "leave it blank if you don't want to change it",
-                        required: false,
-                        input_html: { autocomplete: "new-password" } %>
-            <%= f.input :password_confirmation,
-                        required: false,
-                        input_html: { autocomplete: "new-password" } %>
-            <%= f.input :current_password,
-                        hint: "we need your current password to confirm your changes",
+             <%= f.input :current_password,
+                        placeholder: "Mot de passe actuel",
                         required: true,
                         input_html: { autocomplete: "current-password" } %>
+            <%= f.input :password, placeholder: "Nouveau mot de passe",
+                        label: "Nouveau mot de passe",
+                        required: false,
+                        class: "text-white",
+                        input_html: { autocomplete: "new-password" } %>
+            <%= f.input :password_confirmation,
+                        placeholder: "Confirmer le nouveau mot de passe",
+                        required: false,
+                        input_html: { autocomplete: "new-password" } %>
+
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Update" %>
+            <%= f.button :submit, "Enregistrer", class: "btn-home" %>
           </div>
         <% end %>
 
-        <h3>Cancel my account</h3>
 
-        <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-        <%= link_to "Back", :back %>
+        <p class="mt-3"><%= link_to "Retour", :back, class:"text-decoration-none text-white"%></p>
       </div>
     </div>
   </div>
