--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,19 +13,32 @@
       <li>
         <%= link_to "Réservations", reservations_path, class: "text-dark tab-underlined #{'active' if current_page?(reservations_path)}" %>
       </li>
-      <li>
-        <%= link_to "Modifier mon mot de passe", edit_user_registration_path %>
-      </li>
+
       <% if current_user.admin? %>
         <li>
-          <%= link_to "Tableau de bord", admin_reservations_path, class: "text-dark tab-underlined #{'active' if current_page?(admin_reservations_path)}" %>
+          <%= link_to "Tableau de bord", admin_reservations_path, class: " ms-0 text-dark tab-underlined #{'active' if current_page?(admin_reservations_path)}" %>
         </li>
       <% end %>
-      <li class="ms-auto">
-        <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "tab-underlined text-dark" do  %>
-          <%= image_tag "logout.png", class: "me-2", alt: "Déconnexion" %>
-        <% end %>
-      </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle ms-1" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                  Mon compte
+                </a>
+
+
+
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                  <li><%= link_to "Modifier mon mot de passe", edit_user_registration_path, class:"dropdown-item text-dark" %></li>
+
+
+                </ul>
+            </li>
+           <li class="ms-auto">
+                    <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "tab-underlined text-dark" do  %>
+                      <%= image_tag "logout.png", alt: "Déconnexion" %>
+                    <% end %>
+             </li>
+
     <% else %>
       <li class="ms-auto">
         <%= link_to new_user_session_path, class: "tab-underlined text-dark" do %>
