--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,24 +20,30 @@
         </li>
       <% end %>
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle ms-1" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                  Mon compte
-                </a>
+     <% if current_user.admin == false %>
+        <li class="nav-item dropdown">
+          <a
+            class="tab-underlined <%= 'active' if current_page?(admin_reservations_path) %>"
+        
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+          >
+            Mon compte
+          </a>
+
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <li><%= link_to "Modifier mon mot de passe", edit_user_registration_path, class: "dropdown-item text-dark" %></li>
+          </ul>
+        </li>
+      <% end %>
 
 
-
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <li><%= link_to "Modifier mon mot de passe", edit_user_registration_path, class:"dropdown-item text-dark" %></li>
-
-
-                </ul>
-            </li>
-           <li class="ms-auto">
-                    <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "tab-underlined text-dark" do  %>
-                      <%= image_tag "logout.png", alt: "Déconnexion" %>
-                    <% end %>
-             </li>
+        <li class="ms-auto">
+                <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "tab-underlined text-dark" do  %>
+                  <%= image_tag "logout.png", alt: "Déconnexion" %>
+                <% end %>
+          </li>
 
     <% else %>
       <li class="ms-auto">
