--- a/app/views/proprietes/index.html.erb
+++ b/app/views/proprietes/index.html.erb
@@ -7,7 +7,7 @@
         <%= link_to propriete_path(p), class: "text-decoration-none text-reset w-100", style: "max-width: 20rem;" do %>
           <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden hover-shadow">
             <% if p.nom == "Hendaye, appartement du haut" %>
-              <%= image_tag "jumeaux.jpg", class: "card-img-top", style: "object-fit: cover; height: 200px;" %>
+              <%= image_tag "jumeaux.jpg", class: "card-img-top", id:"haut", style: "object-fit: cover; height: 200px;" %>
             <% elsif p.nom == "Hendaye, appartement du bas" %>
               <%= image_tag "jumeaux2.webp", class: "card-img-top", style: "object-fit: cover; height: 200px;" %>
             <% else %>
@@ -21,6 +21,13 @@
         <% end %>
       </div>
     <% end %>
+  </div>
+  <div class="aquarelle">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 text-center">
+        <%= image_tag"Hendaye_aquarelle" %>
+      </div>
+    </div>
   </div>
 
   <div class="row d-flex justify-content-center ">
