--- a/app/views/proprietes/index.html.erb
+++ b/app/views/proprietes/index.html.erb
@@ -22,10 +22,10 @@
       </div>
     <% end %>
   </div>
-  <div class="aquarelle">
+  <div class="aquarelle mt-3">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-6 text-center">
-        <%= image_tag"Hendaye_aquarelle" %>
+      <div class="col-10 col-md-6 text-center">
+        <%= image_tag"IMG_2162.jpg" %>
       </div>
     </div>
   </div>
