--- a/app/views/proprietes/index.html.erb
+++ b/app/views/proprietes/index.html.erb
@@ -18,7 +18,7 @@
             <% elsif p.nom == "Hendaye, appartement du bas" %>
               <%= image_tag "jumeaux2.webp", class: "card-img-top", style: "object-fit: cover; height: 200px;" %>
             <% else %>
-              <%= image_tag "prechac.jpg", class: "card-img-top", style: "object-fit: cover; height: 200px;" %>
+              <%= image_tag "préchac.jpg", class: "card-img-top", style: "object-fit: cover; height: 200px;" %>
             <% end %>
             <div class="card-body text-center">
               <h5 class="card-title fw-bold"><%= p.nom %></h5>
