--- a/app/views/proprietes/show.html.erb
+++ b/app/views/proprietes/show.html.erb
@@ -8,7 +8,7 @@
       <% elsif @propriete.nom == "Hendaye, appartement du bas" %>
         <%= image_tag "1200x680_grande_plage_hendaye2.jpg", class: "img-fluid full-width-img" %>
       <% else %>
-        <%= image_tag "Préchac_(Hautes-Pyrénées)_1.jpg", class: "img-fluid full-width-img" %>
+        <%= image_tag "prechac.jpg", class: "img-fluid full-width-img" %>
       <% end %>
         <div class="card-trip-infos">
           <div>
