Ajout de font sur le calendrier des réservations

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -73,3 +73,9 @@ h3 {
   color:gold;
   font-size: 36px;
 }
+
+nav > a {
+  font-weight: bolder;
+  text-decoration: underline;
+  font-size: 14px;
+}
