--- a/app/views/reservation_mailer/reservation_confirmation_update.html.erb
+++ b/app/views/reservation_mailer/reservation_confirmation_update.html.erb
@@ -5,7 +5,7 @@
 <p><strong>Nouveau statut :</strong> <%= @reservation.statut %></p>
 
 
-************************************
+<%= image_tag asset_url("logo.png"), alt: "logo" %>
 
 <p>Merci d’utiliser Family Loc !</p>
 <p>https://www.family-loc.store/</p>
