--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -12,7 +12,7 @@
 <p>À bientôt !</p>
 
 
-******************************************************************************
+<%= image_tag asset_url("logo.png"), alt: "logo" %>
 
 <p>Merci d’utiliser Family Loc !</p>
 <p>https://www.family-loc.store/</p>
