--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -11,8 +11,7 @@
 <p>Si vous avez des questions, n'hésitez pas à nous contacter.</p>
 <p>À bientôt !</p>
 
-
-******************************************************************************
+<%= image_tag asset_url("logo.png"), alt: "logo" %>
 
 <p>Merci d’utiliser Family Loc !</p>
 <p>https://www.family-loc.store/</p>
