--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,15 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Une demande a été faite pour changer votre mot de passe. Vous pouvez le faire en suivant le lien ci-dessous.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Changer mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Si vous n'avez pas demandé cela, veuillez ignorer cet e-mail.</p>
+<p>Votre mot de passe ne sera pas changé tant que vous n'aurez pas accédé au lien ci-dessus et créé un nouveau mot de passe.</p>
+
+<p>À bientôt !</p>
+
+<%= image_tag asset_url("logo.png"), alt: "logo" %>
+<p>Merci d’utiliser Family Loc !</p>
+<p>https://www.family-loc.store/</p>
+
