Modif mise en page mail

--- a/app/views/reservation_mailer/reservation_confirmation_update.html.erb
+++ b/app/views/reservation_mailer/reservation_confirmation_update.html.erb
@@ -2,7 +2,7 @@
 
 <p>Le statut de votre demande de réservation pour la propriété "<%= @propriete.nom %>" a été mis à jour.</p>
 
-<p><strong>Nouveau statut :</strong> <%= @reservation.statut %></p>
+<p><strong>Nouveau statut : <%= @reservation.statut %></strong></p>
 
 
 <%= image_tag asset_url("logo.png"), alt: "logo" %>
