--- a/app/views/reservation_mailer/reservation_request_email.html.erb
+++ b/app/views/reservation_mailer/reservation_request_email.html.erb
@@ -1,5 +1,5 @@
 <p>Votre demande de réservation a bien été prise en compte et est en attente de validation</p>
- <p><em>Détails de la réservation :</em></p>
+ <p><strong>Détails de la réservation :</strong></p>
  <p><%= @reservation.propriete.nom %> </p>
  <p> Du <%= @reservation.date_debut.strftime("%d/%m/%Y") %> au <%= @reservation.date_fin.strftime("%d/%m/%Y")%></p>
  <p>Vous recevrez un email dès que le statut de la réservation sera mis à jour</p>
