Modif url image logo pr mail

--- a/app/views/admin_mailer/reservation_reminder.html.erb
+++ b/app/views/admin_mailer/reservation_reminder.html.erb
@@ -1,2 +1,5 @@
 <h1>Rappel de réservation dans 7 jours </h1>
 <p> <%=@reservation.user.nom_complet%>, <%= @reservation.user.email%> pour :<%=@reservation.propriete.nom %> du <%= @reservation.date_debut.strftime("%d/%m/%Y")%> au <%= @reservation.date_fin.strftime("%d/%m/%Y")%></p>
+<%= image_tag "https://www.family-loc.store/images/logo.png", alt: "Logo Family Loc" %>
+<p>Merci d’utiliser Family Loc !</p>
+<p>https://www.family-loc.store/</p>
