--- a/app/views/reservation_mailer/notif_admin.html.erb
+++ b/app/views/reservation_mailer/notif_admin.html.erb
@@ -3,7 +3,7 @@
 <p>pour: <%= @reservation.propriete.nom %></p>
 <p>du <%= @reservation.date_debut.strftime("%d/%m/%Y") %> au <%=@reservation.date_fin.strftime("%d/%m/%Y")%> </p>
 
-<%= image_tag asset_url("logo.png"), alt: "logo" %>
+<%= image_tag "https://www.family-loc.store/images/logo.png", alt: "Logo Family Loc" %>
 
 
 <p>Merci d’utiliser Family Loc !</p>
