--- a/app/views/reservation_mailer/reservation_confirmation_update.html.erb
+++ b/app/views/reservation_mailer/reservation_confirmation_update.html.erb
@@ -5,7 +5,8 @@
 <p><strong>Nouveau statut : <%= @reservation.statut %></strong></p>
 
 
-<%= image_tag asset_url("logo.png"), alt: "logo" %>
+<%= image_tag "https://www.family-loc.store/images/logo.png", alt: "Logo Family Loc" %>
+
 
 <p>Merci d’utiliser Family Loc !</p>
 <p>https://www.family-loc.store/</p>
