--- a/app/views/reservation_mailer/reservation_request_email.html.erb
+++ b/app/views/reservation_mailer/reservation_request_email.html.erb
@@ -3,7 +3,7 @@
  <p><%= @reservation.propriete.nom %> </p>
  <p> Du <%= @reservation.date_debut.strftime("%d/%m/%Y") %> au <%= @reservation.date_fin.strftime("%d/%m/%Y")%></p>
  <p>Vous recevrez un email dès que le statut de la réservation sera mis à jour</p>
-<%= image_tag asset_url("logo.png"), alt: "logo" %>
+<%= image_tag "https://www.family-loc.store/images/logo.png", alt: "Logo Family Loc" %>
 
 <p>Merci d’utiliser Family Loc !</p>
 <p>https://www.family-loc.store/</p>
